--- a/txt/8-conclusion.tex
+++ b/txt/8-conclusion.tex
@@ -26,7 +26,7 @@ From the perspective of a user, access to a log can be shared and revoked.
 The implemented UI fully abstracts from any underlying protocol details such as digital signatures, encryption, and decryption algorithms.
 The implemented algorithms are usable in practice because data can be encrypted for up to 170 users without any noticeable delay.
 
-\subsubsection{Limitations and future work}
+\section{Limitations and future work}
 This thesis is designed to defend against three types of attacks which were derived from potentially malicious users participating in the sharing process of encrypted logs.
 This, however, is not an exhaustive list.
 The performed security analysis and evaluation does not guarantee the general security of the protocol.
